@@ -32,7 +32,7 @@ class YleDlDownloader(object):
 
             outputfile = self.output_name_for_clip(clip, downloader, io)
             self.log_output_file(outputfile)
-            dl_result = downloader.save_stream(outputfile, io)
+            dl_result = downloader.save_stream(outputfile, clip, io)
 
             if dl_result == RD_SUCCESS:
                 self.log_output_file(outputfile, True)
